T0000027: Fix whitespace

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,6 +37,10 @@ td, th {
     border: 1px solid rgb(185, 196, 200);
 } 
 
+td {
+    padding: 2px 6px !important;
+}
+
 .table-light tbody tr td, .table-light thead tr th {
     border: 1px solid rgb(175, 175, 175);
 } 
@@ -47,6 +51,41 @@ td, th {
 
 .table-light tbody tr td, .table-light thead tr th {
     background-color: white;
+}
+
+/* Modal */
+
+.ReactModal__Overlay {
+    background-color: rgba(255, 255, 255, 0.95);
+}
+
+.ReactModal__Content {
+    width: 80vw;
+    position: absolute;
+    left: 10vw!important;
+    border-radius: 20px !important;
+    border: $dark 1px solid !important;
+    padding: 10px 1px 1px!important;
+}
+
+.ReactModal__Content::-webkit-scrollbar {
+    width: 4px;
+}
+
+.ReactModal__Content::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    margin: 19px 0 !important;
+    border-radius: 5px;
+}
+
+.ReactModal__Content::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 6px $dark; 
+}
+
+.modal-close-btn {
+    top: 30px !important;
+    right: 20px !important;
 }
 
 // Topbar
@@ -89,8 +128,7 @@ td, th {
 .sidebar-item {
     color: rgb(77, 77, 77) !important;
     font-size: 14px;
-    padding-left: 9px;
-    padding-right: 9px;
+    padding: 3px 6.5px;
     position: relative;
     margin-right: 10px;
 }
@@ -161,6 +199,7 @@ td, th {
 
 .main-container {
     height: 62.5vh;
+    padding: 4px;
 }
 
 .main-container::-webkit-scrollbar {
@@ -221,10 +260,13 @@ td, th {
     text-decoration: none!important;
 }
 
-.hover-underline:hover, .text-warning.hover-underline:hover .fa-file-pdf {
+.hover-cursor:hover {
     color: $hover!important;
-    text-decoration: underline;
     cursor: pointer;
+}
+
+.hover-underline:hover, .text-warning.hover-underline:hover .fa-file-pdf {
+    text-decoration: underline;
 }
 
 .read-more {
